# fastapi_template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
clickhouse/config/: config.xml  users.xml
clickhouse/migrations/: 001_init_db.sql  001_products.sql
face_data/: products.json  products.sql
postgres/migrations/: 001_init_db.sql  001_users.sql
src/app/: Dockerfile  database.py  dependencies.py  example.env  main.py  settings.py
src/app/engines/clickhouse/: __init__.py  clickhouse.py
src/app/engines/postgres/: __init__.py  engine.py  transaction.py
src/app/enums/: __init__.py  template_enums.py
src/app/micro_types/: __init__.py  template_root.py  template_types.py
src/app/models/: __init__.py  base.py  template_models.py  user.py
src/app/repositories/: __init__.py  products.py  user.py
src/app/routers/: __init__.py  products.py  template_root.py  template_routers.py  user.py
src/app/schemes/: __init__.py  template_root.py  template_schemes.py  user.py
src/app/schemes/internal/: __init__.py  products.py
src/app/services/: __init__.py  products.py  template_services.py  user.py
src/app/static/: swagger-ui.css
src/app/types/: __init__.py  template_types.py
